<resources>
    <string name="app_name">Map</string>
    <string name="mapbox_access_token">sk.eyJ1IjoicmFhZHRlZCIsImEiOiJja25zdHRtM3kwN3RyMnVuM2lzZ2FxajRvIn0.XjMBN0r7YwG_Xpl6dwc4Lw</string>
    <string name="access_token">sk.eyJ1IjoicmFhZHRlZCIsImEiOiJja25zdHRtM3kwN3RyMnVuM2lzZ2FxajRvIn0.XjMBN0r7YwG_Xpl6dwc4Lw</string>
    <string name="user_location_permission_explanation">Please give access to location</string>
    <string name="user_location_permission_not_granted">Access to location is not granted </string>
    <string name="submit">Submit</string>
    <string name="map">Map</string>
    <string name="setting">Settings</string>
    <string name="bookmark">BookMark</string>
    <string name="test">Test</string>
    <string name="location_name">Location Name</string>
    <string name="enter_name">Enter Location Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="speed">speed</string>
    <string name="toggle_dark_mode">Toggle Dark Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="delete_data">Delete Data</string>
    <string name="delete_app_data_from_phone">Delete App Data From Phone</string>
    <string name="clear_database">Are you sure you want to Delete all data?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

</resources>