<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="72dp">

        <TextView
            android:id="@+id/setting_txt"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_horizontal"
            android:text="@string/setting"
            android:textSize="25sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/dark_mode_frame"
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <TextView
            android:id="@+id/dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/text_mode"
            android:layout_width="182dp"
            android:layout_height="49dp"
            android:layout_gravity="bottom"
            android:gravity="center_vertical"
            android:text="@string/toggle_dark_mode" />

        <Switch
            android:id="@+id/dark_mode_switch"
            android:layout_width="143dp"
            android:layout_height="43dp"
            android:layout_gravity="right|center_vertical"
            tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/delete_data_frame"
        android:layout_width="match_parent"
        android:layout_height="78dp">

        <TextView
            android:id="@+id/delete_data"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_data"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/delete_data_text"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_gravity="bottom"
            android:text="@string/delete_app_data_from_phone" />
    </FrameLayout>
</LinearLayout>